checkout - contact details, delivery address, billing address

--- a/views/basket/view.jade
+++ b/views/basket/view.jade
@@ -33,7 +33,7 @@ block content
       .span6      
         button.btn.btn-warning Clear basket
         button.btn.btn-warning Update basket
-        button.btn.btn-primary Checkout
+        button.btn.btn-primary(onclick='window.location=\'/checkout\'') Checkout
 
 
  
