Checkout / view page - skeleton finished

--- a/public/stylesheets/style-wheel.css
+++ b/public/stylesheets/style-wheel.css
@@ -3,3 +3,16 @@
   font-weight: bold;
 }
 
+.order-summary-head {
+  font-weight: bold;
+}
+
+.grand-total {
+  font-weight: bold;
+}
+
+
+.order-summary-totals .head{
+  text-align: right;
+}
+
