--- a/views/page/header.jade
+++ b/views/page/header.jade
@@ -13,4 +13,4 @@
             li
               a(href="/basket/view") Go to basket
             li
-              a(href="/checkout/view") Go to checkout
+              a(href="/checkout") Go to checkout
